# parallel-programming-2019

./: CMakeLists.txt
convolve2D/: CMakeLists.txt  convolve2D.cl  main.cpp
prefix-sum/: CMakeLists.txt  cl.hpp  main.cpp  prefix-sum.cl
src/: main.cpp
